hphp/hack/test/typecheck/new_inference/yield_from_generic.php.like_types.exp
File "yield_from_generic.php", line 4, characters 3-19:
Invalid yield (Typing[4110])
File "yield_from_generic.php", line 3, characters 22-47:
Expected ~Generator<string, T, void> because it is an unenforceable type
File "yield_from_generic.php", line 4, characters 3-19:
But got Generator<string, ~T, [unresolved]> (result of function with 'yield' in the body)
File "yield_from_generic.php", line 7, characters 3-18:
Invalid yield from (Typing[4110])
File "yield_from_generic.php", line 7, characters 3-18:
Expected KeyedTraversable<[unresolved], [unresolved]> (result of function with 'yield' in the body)
File "yield_from_generic.php", line 3, characters 22-47:
But got dynamic because it is an unenforceable type
File "yield_from_generic.php", line 8, characters 3-19:
Invalid yield from (Typing[4110])
File "yield_from_generic.php", line 8, characters 3-19:
Expected KeyedTraversable<[unresolved], [unresolved]> (result of function with 'yield' in the body)
File "yield_from_generic.php", line 3, characters 22-47:
But got dynamic because it is an unenforceable type
